  vector search. (Ben Trent)

* GITHUB#12008: Clean up LongRange#verifyAndEncode logic to remove unnecessary NaN checks. (Greg Miller)

* GITHUB#12003: Minor cleanup/improvements to IndexSortSortedNumericDocValuesRangeQuery. (Greg Miller)

* GITHUB#12016: Upgrade lucene/expressions to use antlr 4.11.1 (Andriy Redko)

Bug Fixes
---------------------
* GITHUB#11726: Indexing term vectors on large documents could fail due to
  trying to apply a dictionary whose size is greater than the maximum supported
  window size for LZ4. (Adrien Grand)

* GITHUB#11768: Taxonomy and SSDV faceting now correctly breaks ties by preferring smaller ordinal
  values. (Greg Miller)

* GITHUB#11907: Fix latent casting bugs in BKDWriter. (Ben Trent)

* GITHUB#11954: Remove QueryTimeout#isTimeoutEnabled method and move check to caller. (Shubham Chaudhary)

* GITHUB#11950: Fix NPE in BinaryRangeFieldRangeQuery variants when the queried field doesn't exist
  in a segment or is of the wrong type. (Greg Miller)

* GITHUB#11990: PassageSelector now has a larger minimum size for its priority queue,
  so that subsequent passage merges don't mean that we return too few passages in
  total. (Alan Woodward, Dawid Weiss)

* GITHUB#11986: Fix algorithm that chooses the bridge between a polygon and a hole when there is
  common vertex. (Ignacio Vera)

* GITHUB#12020: Fixes bug whereby very flat polygons can incorrectly contain intersecting geometries. (Craig Taverner)

* GITHUB#12058: Fix detection of Hotspot in TestRamUsageEstimator so it works with OpenJ9.
  (Uwe Schindler)

* GITHUB#12046: Out of boundary in CombinedFieldQuery#addTerm. (Lu Xugang)

Optimizations
---------------------
* GITHUB#11738: Optimize MultiTermQueryConstantScoreWrapper when a term is present that matches all
  docs in a segment. (Greg Miller)

* GITHUB#11735: KeywordRepeatFilter + OpenNLPLemmatizer always drops last token of a stream.
  (Luke Kot-Zaniewski)
